# invertible-syntax

./: .gitignore  TODO.my  default.nix  invertible-syntax.cabal
example/: json.hs
src/Control/Isomorphism/Partial/: Constructors.hs  Derived.hs  Ext.hs  Prim.hs  TH.hs
src/Control/Isomorphism/Partial/Ext/: Constructors.hs  Data.hs  Prim.hs
src/Text/Syntax/: Poly.hs
src/Text/Syntax/Check/: Prim.hs
src/Text/Syntax/Parser/: Generic.hs  Instances.hs  List.hs  ListSilent.hs  ReadP.hs  Text.hs
src/Text/Syntax/Parser/List/: Compose.hs  Lazy.hs  LazyMaybe.hs  Strict.hs  StrictMaybe.hs  Type.hs
src/Text/Syntax/Poly/: Class.hs  Combinators.hs  Instances.hs  Type.hs
src/Text/Syntax/Poly/Combinators/: Char.hs
src/Text/Syntax/Printer/: List.hs
tests/: Main.hs
