name:                invertible-syntax
version:             0.1.1.0
synopsis:            My flavour of the invertible-syntax library, based on invertible-syntax-poly and partial-isomorphisms packages
description:            My flavour of the invertible-syntax library, based on invertible-syntax-poly and partial-isomorphisms packages
license:             BSD3
license-file:        LICENSE
author:              Duarte Dias <duarte.dd.dias@gmail.com>
maintainer:          Duarte Dias <duarte.dd.dias@gmail.com>
category:            Text
stability:           experimental
build-type:          Simple
cabal-version:       >=1.2

library
  hs-source-dirs:       src
  exposed-modules:
                        Control.Isomorphism.Partial.Ext.Prim
                        Control.Isomorphism.Partial.Ext.Constructors
                        Control.Isomorphism.Partial.Ext.Data
                        Control.Isomorphism.Partial.Ext
                        Text.Syntax.Poly.Class
                        Text.Syntax.Poly.Type
                        Text.Syntax.Poly.Instances
                        Text.Syntax.Poly.Combinators
                        Text.Syntax.Poly.Combinators.Char
                        Text.Syntax.Poly
                        Text.Syntax.Parser.Instances
                        Text.Syntax.Parser.List.Type
                        Text.Syntax.Parser.List.Compose
                        Text.Syntax.Parser.List.Lazy
                        Text.Syntax.Parser.List.LazyMaybe
                        Text.Syntax.Parser.List.Strict
                        Text.Syntax.Parser.List.StrictMaybe
                        Text.Syntax.Parser.ReadP
                        Text.Syntax.Printer.List
                        Text.Syntax.Check.Prim
  
  build-depends:        base < 5, template-haskell
  

source-repository head
  type:     git
  location: https://github.com/iogrt/invertible-syntax