name:                invertible-syntax
version:             0.1.1.0
synopsis:            My flavour of the invertible-syntax library, based on invertible-syntax-poly and partial-isomorphisms packages
description:            My flavour of the invertible-syntax library, based on invertible-syntax-poly and partial-isomorphisms packages
license:             BSD3
license-file:        LICENSE
author:              Duarte Dias <duarte.dd.dias@gmail.com>
maintainer:          Duarte Dias <duarte.dd.dias@gmail.com>
category:            Text
stability:           experimental
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:       src
  exposed-modules:
                        Control.Isomorphism.Partial.Ext.Prim
                        Control.Isomorphism.Partial.Ext.Constructors
                        Control.Isomorphism.Partial.Ext.Data
                        Control.Isomorphism.Partial.Ext
                        Control.Isomorphism.Partial
                        Control.Isomorphism.Partial.Constructors
                        Control.Isomorphism.Partial.Derived
                        Control.Isomorphism.Partial.Prim
                        Control.Isomorphism.Partial.TH

                        Text.Syntax.Poly.Class
                        Text.Syntax.Poly.Type
                        Text.Syntax.Poly.Combinators
                        Text.Syntax.Poly.Combinators.Char
                        Text.Syntax.Poly
                        Text.Syntax.Parser.Generic
                        Text.Syntax.Parser.List
                        Text.Syntax.Parser.ListSilent
                        Text.Syntax.Parser.Text
                        Text.Syntax.Printer.List
                        Text.Syntax.Check.Prim
  
  build-depends:        base < 5, template-haskell, text
  
test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base < 5, HUnit ^>=1.6, invertible-syntax
    hs-source-dirs: tests
    default-language: Haskell2010


source-repository head
  type:     git
  location: https://github.com/iogrt/invertible-syntax